--- a/index.html
+++ b/index.html
@@ -361,13 +361,12 @@
         }
 
         .icons-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-            gap: 2rem;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 1.5rem;
             max-width: 1000px;
             margin: 0 auto;
-            align-items: stretch;
-            grid-auto-rows: 1fr;
+            justify-content: center;
         }
 
         .brand-card {
@@ -376,12 +375,13 @@
             align-items: center;
             justify-content: center;
             gap: 1rem;
-            padding: 2rem 1rem;
-            background: rgba(255, 255, 255, 0.06);
+            width: 140px;
+            height: 160px;
+            padding: 1.5rem 1rem;
+            background: rgba(255, 255, 255, 0.08);
             border: 1px solid rgba(255, 255, 255, 0.2);
             border-radius: 16px;
             transition: background 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
-            height: 100%;
         }
 
         .brand-card:hover,
@@ -560,9 +560,9 @@
         .metric-item {
             text-align: center;
             padding: 1.5rem;
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(255, 255, 255, 0.08);
             border-radius: 12px;
-            border: 1px solid var(--glass-border);
+            border: 1px solid rgba(255, 255, 255, 0.2);
             backdrop-filter: blur(20px);
             transition: all 0.3s ease;
         }
@@ -847,6 +847,10 @@
 
         /* Responsive Design */
         @media (max-width: 768px) {
+            body {
+                --text-secondary: rgba(255, 255, 255, 0.9);
+                --text-muted: rgba(255, 255, 255, 0.7);
+            }
             .mobile-toggle {
                 display: flex;
             }
@@ -890,14 +894,26 @@
                 padding-bottom: 3rem;
             }
 
+            .hero h1 {
+                font-size: 2.8rem;
+                margin-bottom: 1.5rem;
+            }
+
+            .hero p {
+                margin-bottom: 2rem;
+            }
+
+            .hero-cta {
+                margin-top: 2rem;
+            }
+
             .cta-button {
                 width: 100%;
-                max-width: 300px;
+                display: block;
             }
 
             .icons-grid {
-                grid-template-columns: repeat(3, 1fr);
-                gap: 1.5rem;
+                justify-content: center;
             }
 
             .solutions-grid {
@@ -919,14 +935,27 @@
                 gap: 1rem;
             }
 
+            .metric-item {
+                padding: 1.25rem;
+            }
+
             .footer-content {
                 grid-template-columns: 1fr;
                 gap: 2rem;
                 text-align: center;
             }
 
-            .logo-text {
+            .logo-subtitle {
                 display: none;
+            }
+
+            .logo-title {
+                font-size: 1.25rem;
+            }
+
+            .logo-text {
+                flex-direction: row;
+                align-items: center;
             }
 
             .testimonial-preview {
@@ -935,8 +964,12 @@
         }
 
         @media (max-width: 480px) {
-            .icons-grid {
-                grid-template-columns: repeat(2, 1fr);
+            .hero h1 {
+                font-size: 2.5rem;
+            }
+
+            .hero p {
+                font-size: 1.1rem;
             }
 
             .solution-card {
@@ -1080,27 +1113,7 @@
                 <span>Lounges</span>
             </div>
             
-            <div class="brand-card" tabindex="0" aria-label="Hookah or Hybrid venues">
-                <svg viewBox="0 0 64 64" aria-hidden="true">
-                    <rect x="28" y="8" width="8" height="40" rx="4"/>
-                    <circle cx="32" cy="52" r="6"/>
-                    <path d="M26 20Q32 16 38 20"/>
-                    <path d="M26 28Q32 24 38 28"/>
-                    <path d="M26 36Q32 32 38 36"/>
-                </svg>
-                <span>Hookah/Hybrid</span>
-            </div>
             
-            <div class="brand-card" tabindex="0" aria-label="Analytics and Franchise operations">
-                <svg viewBox="0 0 64 64" aria-hidden="true">
-                    <rect x="8" y="16" width="48" height="32" rx="4"/>
-                    <path d="M16 28L24 36L48 20"/>
-                    <circle cx="20" cy="32" r="2"/>
-                    <circle cx="32" cy="24" r="2"/>
-                    <circle cx="44" cy="36" r="2"/>
-                </svg>
-                <span>Analytics/Franchise</span>
-            </div>
         </div>
     </section>
 
