Update Logo Button

--- a/index.html
+++ b/index.html
@@ -1222,7 +1222,7 @@
     <!-- Header -->
     <header class="header" id="header">
         <nav class="nav-container">
-            <a href="#" class="logo">
+            <a href="#home" class="logo">
                 <div class="logo-icon">
     <img src="https://raw.githubusercontent.com/3sc0rp/Blunari/refs/heads/main/logo-bg.png" alt="Blunari Logo" width="48" height="48" />
 </div>
